# lexical-analyzer

./: .gitignore  .pre-commit-config.yaml  CLEANUP_SUMMARY.md  GITHUB_ACTIONS_FINAL_FIX.md  GITHUB_ACTIONS_FINAL_SUMMARY.md  GITHUB_ACTIONS_FIX.md  GITHUB_ACTIONS_VERSION_FIX.md  Makefile  PROJECT_COMPLETE_SUMMARY.md  README.md  REGEX_GUIDE.md  SCRIPTS_README.md  analyze_patterns.py  analyze_regex.py  cli.py  debug_char_class.py  debug_problematic.py  install.py  pyproject.toml  requirements.txt  test_complex_regex.py  test_fixed_concat.py  test_fixed_thompson.py  test_from_files.py  test_lexical.py  test_problematic.py  test_simple.py  test_thompson.py
.github/: README.md
.github/workflows/: ci-new.yml  ci-poetry.yml  ci-simple.yml  ci.yml
algorithms/: hopcroft.py  subset_construction.py  thompson.py
examples/: example.py  expressions.txt
lexical_analyzer/: cli.py
lexical_analyzer/algorithms/: __init__.py  thompson.py
lexical_analyzer/visualization/: __init__.py
scripts/: setup.py
src/lexical_analyzer/: __init__.py
src/lexical_analyzer/algorithms/: __init__.py
src/lexical_analyzer/core/: __init__.py
src/lexical_analyzer/visualization/: __init__.py
tests/: README.md
tests/integration/: test_pipeline.py  verify_all.py
tests/unit/: test_basic.py  test_core.py
